Fixed expand/collapse issue when there are few log lines.

--- a/src/client/app/flogo.logs/components/logs.component.less
+++ b/src/client/app/flogo.logs/components/logs.component.less
@@ -9,6 +9,8 @@
 
 .flogo-logs {
   //height: 100%;
+  flex:1;
+  height: 100%;
 
   .header {
     color: #8a90ae;
